added styling for menubar and for mobile navbar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,3 +28,15 @@ p.notice{
 div.nav-wrapper{
   background-color: $maincolor;
 }
+
+.navside {
+  font-size: 28px;
+  border-bottom: solid black;
+}
+a.navside:hover {
+  background-color: $maincolor;
+  color: white;
+}
+#mobile-demo {
+  background-color: lightgrey;
+}
