changes to the homepage for mobile

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,19 @@
+<div>
+  <h2>The St. Botolph Neighborhood</h2>
+  <p>The St. Botolph District was developed in the 1850's as a residential neighborhood and is a historical site protected by the St. Botolph Historic District Commission. It consists of 8 blocks east to west, and its boundaries are Huntington Avenue, Copley Place, the Southwest Corridor Park and Massachusetts Avenue. Because of its Back Bay/Prudential location closely bordering the South End (via the Southwest Corridor Park), its residents enjoy the benefits of easy access to many thriving commercial areas while enjoying the quiet ambiance of a comfortable residential neighborhood.</p>
+  <p>The St. Botolph neighborhood is known for the diversity of both its residents and architecture, and it has continued that diversity while maintaining its historic character. Artists, musicians, professionals, and families live in historic brownstones and modern condominiums. Owners and renters live side by side and actively participate in protecting the neighborhood’s visual beauty and residential character.</p>
+</div>
 
+<div>
+  <h2>The Saint Botolph Neighborhood Association</h2>
+  We are a volunteer community organization open to all residents.
+  <div>
+    <strong>We strive to:</strong>
+    <ul>
+      <li>Foster civic spirit, goodwill and friendship between and among all residents.</li>
+      <li>Promote the general welfare of the neighborhood and protect and upgrade its residential and historical character.</li>
+      <li> Help ensure a clean, safe and well maintained neighborhood, as well as its continued improvement and beautification.</li>
+      <li>Identify and represent the best interests of the neighborhood while serving as a vital communication link with businesses, the City of Boston, and other government agencies on issues affecting the neighborhood and our residents.</li>
+    </ul>
+  </div>
+</div>
