--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -50,11 +50,11 @@ a.navside:hover {
   background-color: lightgrey;
 }
 
-div#topbanner {
-  background-image: image-url("St-BotolphBanner1_01.gif");
+div#topbanner img {
+  // background-image: image-url("St-BotolphBanner1_01.gif");
   background-repeat: no-repeat;
   background-size: cover;
-  height: 220px;
+  height: auto;
   width: 100%;
   padding: 0;
 }
@@ -71,5 +71,5 @@ div#topbanner {
 }
 nav ul.hide-on-med-and-down {
   text-align: center;
-
+  margin-left: auto;
 }
