fix state dropdown and change address line two to string

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -48,7 +48,7 @@
 
       <div class="field">
         <%= f.label :zipcode %><br />
-        <%= f.email_field :zipcode %>
+        <%= f.text_field :zipcode %>
       </div>
 
       <div class="field">
