--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,5 @@
-
+<%= render 'layouts/error_messages', object: resource %>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
     <div class="row">
       <div class="col s10 offset-s1">
 
@@ -16,10 +15,13 @@
 
       <div class="field">
         <%= f.label :email %><br />
-        <%= f.email_field :email %>
+        <%= f.email_field :email, type:"email", class: "validate" %>
       </div>
 
-
+      <div class="field">
+        <%= f.label :phone_number %><br />
+        <%= f.text_field :phone_number, class: "materialize-textarea", length: "10" %>
+      </div>
 
       <div class="field">
         <%= f.label :street, "Address Line 1" %><br />
@@ -37,13 +39,13 @@
 
       <div class="field">
         <%= f.label :state %>
-        <%= f.select :state, options_for_select(@states), include_blank: true %>
+        <%= f.select :state, options_for_select(RegistrationsController::STATES), include_blank: true %>
       </div>
 
 
       <div class="field">
         <%= f.label :zipcode %><br />
-        <%= f.text_field :zipcode %>
+        <%= f.text_field :zipcode, class: "materialize-textarea", length: "5" %>
       </div>
 
       <div class="field">
