user profile page set up in nav but not mobile nav

--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -5,7 +5,9 @@ $navmaincolor: #D7D7D7;
   height:64px;
   margin-bottom: 0px;
 }
-
+#search:focus {
+  background-color: $maincolor;
+}
 nav .input-field label i {
   color: #navmaincolor;
   transition: color .3s;
