changed input devise reg fields to now have some js movement

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,52 +3,52 @@
     <div class="row">
       <div class="col s10 offset-s1">
 
-      <div class="field">
+      <div class="input-field">
         <%= f.label :first_name %>
         <%= f.text_field :first_name, autofocus: true %>
       </div>
 
-      <div class="field">
+      <div class="input-field">
         <%= f.label :last_name %><br />
         <%= f.text_field :last_name %>
       </div>
 
-      <div class="field">
+      <div class="input-field">
         <%= f.label :email %><br />
         <%= f.email_field :email, type:"email", class: "validate" %>
       </div>
 
-      <div class="field">
+      <div class="input-field">
         <%= f.label :phone_number %><br />
         <%= f.text_field :phone_number, class: "materialize-textarea", length: "10" %>
       </div>
 
-      <div class="field">
+      <div class="input-field">
         <%= f.label :street, "Address Line 1" %><br />
         <%= f.text_field :street %>
       </div>
-      <div class="field">
+      <div class="input-field">
         <%= f.label :other_address, "Address Line 2" %><br />
         <%= f.text_field :other_address %>
       </div>
 
-      <div class="field">
+      <div class="input-field">
         <%= f.label :city %><br />
         <%= f.text_field :city %>
       </div>
 
-      <div class="field">
+      <div class="input-field">
         <%= f.label :state %>
         <%= f.select :state, options_for_select(RegistrationsController::STATES), include_blank: true %>
       </div>
 
 
-      <div class="field">
+      <div class="input-field">
         <%= f.label :zipcode %><br />
         <%= f.text_field :zipcode, class: "materialize-textarea", length: "5" %>
       </div>
 
-      <div class="field">
+      <div class="input-field">
         <%= f.label :password %>
         <% if @minimum_password_length %>
         <em>(<%= @minimum_password_length %> characters minimum)</em>
@@ -56,7 +56,7 @@
         <%= f.password_field :password, autocomplete: "off" %>
       </div>
 
-      <div class="field">
+      <div class="input-field">
         <%= f.label :password_confirmation %><br />
         <%= f.password_field :password_confirmation, autocomplete: "off" %>
       </div>
