created a mailer and a mail view. Set up mailing to be shown in development. Starting to add tests

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -38,7 +38,7 @@
       </div>
 
       <div class="input-field">
-        <%= f.label :state %>
+        <%= f.label :state %><br />
         <%= f.select :state, options_for_select(RegistrationsController::STATES), include_blank: true %>
       </div>
 
