--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -64,7 +64,7 @@
         <li><%= link_to "Profile", user_path(current_user), class: "navside" %></li>
       <% end %>
       <li><%= link_to "SBNA", root_path, class: "navside"  %></li>
-      <li><a class="navside" href="#">Events</a></li>
+      <li><%= link_to("Events", events_path, class: "navside") %></a></li>
       <li><a class="navside" href="#">Board</a></li>
       <li><a class="navside" href="#">Committees</a></li>
       <li><a class="navside" href="#">Meeting Minutes</a></li>
