added a form to create new events. Added home display of three upcoming events

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,7 +13,7 @@
  *= require_tree .
  *= require_self
  *= require fullcalendar
-
+ *= require datetimepicker
 
  */
  @import "materialize";
@@ -28,5 +28,9 @@ p.notice{
   margin: 0px;
 }
 select#user_state {
+  display: flex;
+}
+
+select {
   display: flex;
 }
