--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,16 +1,58 @@
-input-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2>Edit <%= resource_name.to_s.humanize %></h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
+
+
+  <div class="input-field">
+    <%= f.label :first_name, "First Name" %>
+    <%= f.text_field :first_name, autofocus: true %>
+  </div>
+
+  <div class="input-field">
+    <%= f.label :last_name, "Last Name" %><br />
+    <%= f.text_field :last_name %>
+  </div>
 
   <div class="input-field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true %>
   </div>
 
+
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
+
+  <div class="input-field">
+    <%= f.label :phone_number, "Phone Number" %><br />
+    <%= f.text_field :phone_number, class: "materialize-textarea", length: "10" %>
+  </div>
+
+  <div class="input-field">
+    <%= f.label :street, "Address Line 1" %><br />
+    <%= f.text_field :street %>
+  </div>
+  <div class="input-field">
+    <%= f.label :other_address, "Address Line 2" %><br />
+    <%= f.text_field :other_address %>
+  </div>
+
+  <div class="input-field">
+    <%= f.label :city %><br />
+    <%= f.text_field :city %>
+  </div>
+
+  <div class="input-field">
+    <%= f.label :state %><br /><br />
+    <%= f.select :state, options_for_select(RegistrationsController::STATES), include_blank: true %>
+  </div>
+
+
+  <div class="input-field">
+    <%= f.label :zipcode %><br />
+    <%= f.text_field :zipcode, class: "materialize-textarea", length: "5" %>
+  </div>
 
   <div class="input-field">
     <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
