--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,7 +16,23 @@
     </ul>
   </div>
   <div class="col s3" id="eventColumn">
-    Placeholder for react Redux Event Component
+    <% @upcomingEvents.each do |event| %>
+      <div class="col s12 m12">
+        <div class="card">
+          <div class="card-image">
+            <img src="http://lorempixel.com/100/190/nature/6" height="100px" width="100px">
+            <span class="card-title"><%= event.title  %></span>
+          </div>
+          <div class="card-content">
+            Start: <%= event.start.strftime("%m/%d/%Y at %I:%M%p") %>
+            End: <%= event.end.strftime("%m/%d/%Y at %I:%M%p") %>
+          </div>
+          <div class="card-action">
+            <%= link_to "Link to Event", event_path(event) %>
+          </div>
+        </div>
+      </div>
+    <% end %>
   </div>
 
 </div>
