--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,5 @@
-hello
+<%= @user_info.fullname  %>
+<%= @user_info.phone_number %>
+<%= @user_info.full_address %>
+
+<%= link_to "Edit Profile", edit_user_registration_path %>
