fixing events page

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,5 +1,7 @@
-<% if current_user.admin? %>
-  <%= link_to 'New Event', new_event_path %>
+<% if user_signed_in %>
+  <% if current_user.admin? %>
+    <%= link_to 'New Event', new_event_path %>
+  <% end %>
 <% end %>
 
 <div id="calendar"></div>
