forgot to add question mark

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,4 +1,4 @@
-<% if user_signed_in %>
+<% if user_signed_in? %>
   <% if current_user.admin? %>
     <%= link_to 'New Event', new_event_path %>
   <% end %>
