--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,9 +1,13 @@
+<div class="row">
 <% if user_signed_in? %>
   <% if current_user.admin? %>
-    <%= link_to 'New Event', new_event_path %>
+    <%= link_to new_event_path, class: "right btn-floating btn-large waves-effect waves-light red" do %>
+      <i class="material-icons">add</i>
+    <% end %>
   <% end %>
 <% end %>
-
-<div id="calendar"></div>
-
+  <div class="col s10 offset-s1">
+    <div id="calendar"></div>
+  </div>
+</div>
 <div id='thing'></div>
