changed the event#new and event#edit to have create event and update event

--- a/app/views/events/_eventform.html.erb
+++ b/app/views/events/_eventform.html.erb
@@ -34,7 +34,7 @@
       </div>
 
       <div class="actions">
-        <%= f.submit "Create Event" %>
+        <%= f.submit @value, class: "center btn red" %>
       </div>
 
     <% end %>
