--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,1 +1,1 @@
-<%= render "events/eventform", locals: {event: @event, url: @url } %>
+<%= render "events/eventform", locals: {event: @event, url: @url, value: @value } %>
