--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -6,14 +6,14 @@
       <li><%= link_to("SBNA", root_path) %></li>
       <li><a href="#" class="dropdown-button" href="#!" data-activates="dropdown3">Events<i class="material-icons right">arrow_drop_down</i></a></li>
         <ul id="dropdown3" class="dropdown-content">
-          <li><%= link_to("Upcoming Events", events_path) %></li>
-          <li><%= link_to("Calendar",calendar_path) %></li>
+          <li class="topnav-drop"><%= link_to("Upcoming Events", events_path) %></li>
+          <li class="topnav-drop"><%= link_to("Calendar",calendar_path) %></li>
         </ul>
       <li><a href="#" class="dropdown-button" href="#!" data-activates="dropdown1">About<i class="material-icons right">arrow_drop_down</i></a></li>
         <ul id="dropdown1" class="dropdown-content">
-          <li><a href="#">Board</a></li>
-          <li><a href="#">Committees</a></li>
-          <li><a href="#">Meeting Minutes</a></li>
+          <li class="topnav-drop"><a href="#">Board</a></li>
+          <li class="topnav-drop"><a href="#">Committees</a></li>
+          <li class="topnav-drop"><a href="#">Meeting Minutes</a></li>
         </ul>
       <li><a href="#">Contact</a></li>
       <% if !user_signed_in? %>
@@ -68,12 +68,16 @@
         <li><%= link_to "Profile", user_path(current_user), class: "navside" %></li>
       <% end %>
       <li><%= link_to "SBNA", root_path, class: "navside"  %></li>
-      <li><%= link_to("Events", events_path, class: "navside") %></a></li>
+      <li><a href="#" class="dropdown-button navside" href="#!" data-activates="dropdown4">Events<i class="material-icons right">arrow_drop_down</i></a></li>
+        <ul id="dropdown4" class="dropdown-content">
+          <li><%= link_to("Upcoming", events_path, class: "navside drop") %></li>
+          <li><%= link_to("Calendar", calendar_path, class: "navside drop") %></li>
+        </ul>
       <li><a href="#" class="dropdown-button navside" href="#!" data-activates="dropdown2">About<i class="material-icons right">arrow_drop_down</i></a></li>
         <ul id="dropdown2" class="dropdown-content">
-          <li><a href="#">Board</a></li>
-          <li><a href="#">Committees</a></li>
-          <li><a href="#">Meeting Minutes</a></li>
+          <li><a href="#" class="navside drop">Board</a></li>
+          <li><a href="#" class="navside drop">Committees</a></li>
+          <li><a href="#" class="navside drop">Meeting Minutes</a></li>
         </ul>
       <li><a class="navside" href="#">Contact</a></li>
       <% if user_signed_in? %>
