--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -61,41 +61,8 @@
         </li>
         </ul>
       <% end %>
+    </ul>
 
-    </ul>
-    <ul class="side-nav" id="mobile-demo">
-      <% if user_signed_in? %>
-        <li><%= link_to "Profile", user_path(current_user), class: "navside" %></li>
-      <% end %>
-      <li><%= link_to "SBNA", root_path, class: "navside"  %></li>
-      <li><a href="#" class="dropdown-button navside" href="#!" data-activates="dropdown4">Events<i class="material-icons right">arrow_drop_down</i></a></li>
-        <ul id="dropdown4" class="dropdown-content">
-          <li><%= link_to("Upcoming", events_path, class: "navside drop") %></li>
-          <li><%= link_to("Calendar", calendar_path, class: "navside drop") %></li>
-        </ul>
-      <li><a href="#" class="dropdown-button navside" href="#!" data-activates="dropdown2">About<i class="material-icons right">arrow_drop_down</i></a></li>
-        <ul id="dropdown2" class="dropdown-content">
-          <li><a href="#" class="navside drop">Board</a></li>
-          <li><a href="#" class="navside drop">Committees</a></li>
-          <li><a href="#" class="navside drop">Meeting Minutes</a></li>
-        </ul>
-      <li><a class="navside" href="#">Contact</a></li>
-      <% if user_signed_in? %>
-        <li><%= link_to("Sign Out", destroy_user_session_path, method: :delete,
-          class: "navside") %>
-        </li>
-        <% if current_user.admin? %>
-          <li>
-            <%= link_to("Admin Section", admin_users_path,
-            class: "navside") %>
-          </li>
-        <% end %>
-      <% else %>
-        <li><%= link_to "Join The SBNA", new_user_registration_path, class: "navside" %></li>
-        <li><%= link_to("Sign In", new_user_session_path,
-        class: "navside") %>
-        </li>
-      <% end %>
-    </ul>
+    <%= render "layouts/mobilenav" %>
   </div>
 </nav>
