--- a/app/views/layouts/_error_messages.html.erb
+++ b/app/views/layouts/_error_messages.html.erb
@@ -20,13 +20,13 @@
         </script>
 
       </div>
-      <!-- <button type="button"  data-dismiss="alert" aria-hidden="true">&times;</button> -->
-      <!-- <p><strong>This form contains <%= pluralize(object.errors.count, 'error') %>.</strong></p>
+      <button type="button"  data-dismiss="alert" aria-hidden="true">&times;</button>
+      <p><strong>This form contains <%= pluralize(object.errors.count, 'error') %>.</strong></p>
       <ul>
         <% object.errors.full_messages.each do |msg| %>
           <li><%= msg %></li>
         <% end %>
       </ul>
-    </div> -->
+    </div>
   </div>
 <% end %>
