--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,85 +1,94 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="row">
+  <div class="col s10 offset-s1">
+    <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+    <%= devise_error_messages! %>
+      <div class="input-field">
+        <%= f.label :first_name, "First Name" %>
+        <%= f.text_field :first_name, autofocus: true %>
+      </div>
 
+      <div class="input-field">
+        <%= f.label :last_name, "Last Name" %><br />
+        <%= f.text_field :last_name %>
+      </div>
 
-  <div class="input-field">
-    <%= f.label :first_name, "First Name" %>
-    <%= f.text_field :first_name, autofocus: true %>
-  </div>
+      <div class="file-field input-field">
+        <div class="btn">
+          <span>Profile Picture</span>
+          <%= f.file_field :profphoto %>
+        </div>
+        <div class="file-path-wrapper">
+          <input class="file-path validate" type="text">
+        </div>
+      </div>
 
-  <div class="input-field">
-    <%= f.label :last_name, "Last Name" %><br />
-    <%= f.text_field :last_name %>
-  </div>
-
-  <div class="input-field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="input-field">
-    <%= f.label :phone_number, "Phone Number" %><br />
-    <%= f.text_field :phone_number, class: "materialize-textarea", length: "10" %>
-  </div>
-
-  <div class="input-field">
-    <%= f.label :street, "Address Line 1" %><br />
-    <%= f.text_field :street %>
-  </div>
-  <div class="input-field">
-    <%= f.label :other_address, "Address Line 2" %><br />
-    <%= f.text_field :other_address %>
-  </div>
-
-  <div class="input-field">
-    <%= f.label :city %><br />
-    <%= f.text_field :city %>
-  </div>
-
-  <div class="input-field">
-    <%= f.label :state %><br /><br />
-    <%= f.select :state, options_for_select(RegistrationsController::STATES), include_blank: true %>
-  </div>
+      <div class="input-field">
+        <%= f.label :email %><br />
+        <%= f.email_field :email, autofocus: true %>
+      </div>
 
 
-  <div class="input-field">
-    <%= f.label :zipcode %><br />
-    <%= f.text_field :zipcode, class: "materialize-textarea", length: "5" %>
-  </div>
+      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+        <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+      <% end %>
 
-  <div class="input-field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
+      <div class="input-field">
+        <%= f.label :phone_number, "Phone Number" %><br />
+        <%= f.text_field :phone_number, class: "materialize-textarea", length: "10" %>
+      </div>
+
+      <div class="input-field">
+        <%= f.label :street, "Address Line 1" %><br />
+        <%= f.text_field :street %>
+      </div>
+      <div class="input-field">
+        <%= f.label :other_address, "Address Line 2" %><br />
+        <%= f.text_field :other_address %>
+      </div>
+
+      <div class="input-field">
+        <%= f.label :city %><br />
+        <%= f.text_field :city %>
+      </div>
+
+      <div class="input-field">
+        <%= f.label :state %><br /><br />
+        <%= f.select :state, options_for_select(RegistrationsController::STATES), include_blank: false %>
+      </div>
+
+
+      <div class="input-field">
+        <%= f.label :zipcode %><br />
+        <%= f.text_field :zipcode, class: "materialize-textarea", length: "5" %>
+      </div>
+
+      <div class="input-field">
+        <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+        <%= f.password_field :password, autocomplete: "off" %>
+        <% if @minimum_password_length %>
+          <br />
+          <em><%= @minimum_password_length %> characters minimum</em>
+        <% end %>
+      </div>
+
+      <div class="input-field">
+        <%= f.label :password_confirmation %><br />
+        <%= f.password_field :password_confirmation, autocomplete: "off" %>
+      </div>
+
+      <div class="input-field">
+        <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+        <%= f.password_field :current_password, autocomplete: "off" %>
+      </div>
+
+      <div class="actions">
+        <%= f.submit "Update", class: "btn" %>
+      </div>
     <% end %>
+    <p><%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure you want to cancel your account?" }, method: :delete, class: "btn red" %></p>
   </div>
-
-  <div class="input-field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="input-field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+</div>
 
 <%= link_to "Back", :back %>
