--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,8 +2,6 @@
 <div class="row">
   <div class="col s10 offset-s1">
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-
-
       <div class="input-field">
         <%= f.label :first_name, "First Name" %>
         <%= f.text_field :first_name, autofocus: true %>
@@ -12,6 +10,16 @@
       <div class="input-field">
         <%= f.label :last_name, "Last Name" %><br />
         <%= f.text_field :last_name %>
+      </div>
+
+      <div class="file-field input-field">
+        <div class="btn">
+          <span>Profile Picture</span>
+          <%= f.file_field :profphoto %>
+        </div>
+        <div class="file-path-wrapper">
+          <input class="file-path validate" type="text">
+        </div>
       </div>
 
       <div class="input-field">
@@ -43,7 +51,6 @@
         <%= f.select :state, options_for_select(RegistrationsController::STATES), include_blank: true %>
       </div>
 
-
       <div class="input-field">
         <%= f.label :zipcode %><br />
         <%= f.text_field :zipcode, class: "materialize-textarea", length: "5" %>
@@ -63,10 +70,10 @@
       </div>
 
       <div class="actions">
-        <%= f.submit "Sign Up" %>
+        <%= f.submit "Sign Up", class: "btn" %>
       </div>
-    </div>
+    <% end %>
   </div>
-<% end %>
+</div>
 
 <!-- <%= render "devise/shared/links" %> -->
