--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <%= @user_info.fullname  %>
 <%= @user_info.phone_number %>
 <%= @user_info.full_address %>
-
+<%= image_tag(@user_info.profphoto) %>
 <%= link_to "Edit Profile", edit_user_registration_path %>
